# agent-toolkit

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md
examples/: conversational_agent.py  multi_tool_agent.py  simple_agent.py
src/: __init__.py  agent.py  config.py
src/prompts/: system_prompt.txt
src/tools/: __init__.py  example_tool.py
tests/: __init__.py  test_agent.py  test_tools.py
